# pyws-chess

./: Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
src/: asgi.py
src/app/: main.py  messages.py
src/app/core/: game.py  player.py
src/core/: game.py
src/game/: __init__.py
src/templates/: index.html
static/css/: main.css
tests/: conftest.py  player.py  test_app.py  test_game.py
